# brol

./: CODE_OF_CONDUCT.md  LICENSE.txt  README.md
c/TunTap/: tun_tap.c  tun_tap.h
c/easyfb/: .gitignore  CMakeLists.txt  LICENSE.txt
c/easyfb/include/easyfb/: fbcolors.h  framebuffer.h
c/easyfb/src/: framebuffer.c
c/easyfb/tests/test-chess/: chess.c
c/easyfb/tests/test-read/: fbread.c
c/easyfb/tests/test-write/: fbwrite  fbwrite.c
c/elapsed-us/: main.c
c/getline/: getline.c
c/jannson/: jansson.c
c/progress_bar/: progress_bar.c
c/settimeofday/: settime.c
c/sigint/: sigint.c
c/traslate-bit-size/: main.c
c/uintToAscii/: main.c
c/union/: union.c
cpp/aixlog/: main.cpp
cpp/base64pp/: base64.cpp  base64.hpp
cpp/cli11/: main.cpp
cpp/fstream-doesnot-throw/: main.cpp
cpp/ftpcurlpp/: curlftp.cpp
cpp/getdir/: getdir.cpp
cpp/libzip/: zip.cpp
cpp/logrotator/: logfile.cpp  logfile.hpp  logrotator.cpp  logrotator.hpp
cpp/lunasvg/: main.cpp
cpp/lz4/: lz4.cpp
cpp/mosquittopp/: main.cpp  mqttclient.cpp  mqttclient.hpp  mqttmessage.cpp  mqttmessage.hpp
cpp/nlohmann-query/: jsonquery.cpp
cpp/plog/: main.cpp
cpp/tzoffset/: main.cpp
cpp/utils/fsutils/: fsutils.cpp  fsutils.hpp
cpp/utils/strutils/: strutils.cpp  strutils.hpp
cpp/utils/sysutils/: sysutils.cpp  sysutils.hpp
cpp/xml2/: main.cpp
elm/: .gitignore
elm/json-custom-type-decoder/: Main.elm
elm/json-decoder-list/: index.html
elm/json-decoder-list/data/: data.json
elm/json-decoder-list/src/: Main.elm
elm/json-decoder/data/: data.json
elm/json-decoder/src/: Main.elm
elm/utils/: DecodeUtils.elm  FmtUtils.elm  ValidationUtils.elm
java/ISO3166/: ISO3166.java
java/ISO8601/: ISO8601.java
java/MySqlDateTime/: MySqlDateTime.java
js/flatten/: flatten.js
js/range/: range.js
js/strptime/: strptime.js
php/json-node/: get_json_node.php
php/requests/: json-get.php  json-post.php
php/resize-image/: resize-image.php
python/base64/: base64-cli.py
python/cake-doses/: cake-doses.py
python/cruciverba-crawler/: bak.csv  crawler.py  output.csv
python/crypter/: crypter.py
python/etherscan-genesis-addresses/: get_genesis_addresses.py  json_to_init_data.py
python/fibonacci/: fibonaccy.py
python/github-downloads/: github-downloads.py
python/json-patch/: json-patch.py
python/kasa-discover/: discover.py
python/logrotate-cli/: logrotate-cli.py
python/modem-utils/: modem-utils.py
python/msfs-zip/: msfs-unzip.py  msfs-zip.py
python/netaddr-calc/: netaddr-calc.py
python/proportion/: proportion.py
python/randtime/: randtime.py
python/spaziogrigio-newsletter/: spam.sh  spaziogrigio.py
python/struncate/: struncate.py
python/subvar/: subvar.py
python/tapo-discover/: cloud.py  device.json  discover.py  tapo_devices.py  udp_test.py
python/voice-demo/: play.py  pydub_speech.py  silence.py  voice.py
python/wikidata-search/: wikidata-search.py
qt/FPSText/: README.md  fpstext.cpp  fpstext.h
qt/FileHandler/: filehandler.cpp  filehandler.h
qt/Netif/: netif.cpp  netif.h
qt/Pong/: main.qml  qml.qrc
qt/Process/: process.cpp  process.h
react/: AutoRelativeTime.jsx  AutoRelativeTime.tsx
rust/: .gitignore
rust/aws-s3-cli/: .gitignore  Cargo.toml
rust/aws-s3-cli/src/: bucket.rs  command.rs  main.rs
rust/bytes/: Cargo.toml
rust/bytes/src/: main.rs
rust/c-enums/: Cargo.toml
rust/c-enums/src/: main.rs
rust/chrono/: main.rs
rust/chrono-tz-test/: Cargo.toml
rust/chrono-tz-test/src/: main.rs
rust/console/: console.rs
rust/cursor/: Cargo.toml
rust/cursor/src/: lib.rs  unit.rs
rust/features-not-working/: Cargo.toml
rust/features-not-working/src/: main.rs
rust/file-utils/: file.rs
rust/fs-notify/: Cargo.toml
rust/fs-notify/src/: main.rs
rust/fuzzy-finder/: Cargo.toml
rust/fuzzy-finder/src/: main.rs
rust/generic-range-parser/: Cargo.toml
rust/generic-range-parser/src/: main.rs
rust/git/: git.rs
rust/git-latest-release/: Cargo.toml
rust/git-latest-release/src/: main.rs
rust/imap-client/: .env.example  .gitignore  Cargo.toml
rust/imap-client/src/: main.rs
rust/iplocation/: Cargo.toml
rust/iplocation/src/: main.rs
rust/key-event-serde/: Cargo.toml
rust/key-event-serde/src/: main.rs
rust/keyring-client/: Cargo.toml
rust/keyring-client/src/: main.rs
rust/list/src/: main.rs
rust/magic-crypt/: main.rs
rust/minikube-deploy/: Cargo.toml
rust/minikube-deploy/scripts/: start.sh  stop.sh
rust/minikube-deploy/src/: main.rs
rust/moka-size/: Cargo.toml
rust/moka-size/src/: main.rs
rust/msg-demo/: Cargo.toml
rust/msg-demo/src/: lib.rs  (+1 more)
rust/notifications/: Cargo.toml
rust/open/: Cargo.toml
rust/parser-btc-script/: Cargo.toml
rust/pipe/: pipe.rs
rust/progress_bar/: main.rs
rust/rabbitmq/: Cargo.toml
rust/rabbitmq/src/: consumer.rs  publisher.rs
rust/rand-seed/: Cargo.toml
rust/refcounter/: main.rs
rust/relative_fs_access/: Cargo.toml
rust/remotefs-ssh/: Cargo.toml
rust/remotefs-ssh/src/: main.rs
rust/rune-parser/: Cargo.toml
rust/sftp-client/: main.rs
rust/sha1/: Cargo.toml
rust/sounds-8-bit/: Cargo.toml
rust/src/: consumer.rs
rust/ssh-client/: main.rs
rust/ssh-config/: Cargo.toml
rust/store/: store.rs
rust/subproc/: subproc.rs
rust/surrealdb-demo/: Cargo.toml
rust/surrealdb-demo/src/: main.rs
rust/surrealdb-demo/src/database/: mod.rs
rust/surrealdb-demo/src/web/: mod.rs
rust/test-keyring/: Cargo.toml
rust/trycmd-replace/: .gitignore  Cargo.toml
rust/tui-canvas/: Cargo.toml
rust/yahoo-finance/: Cargo.toml  script.sh
shell/fish/: functions.sh
(+22 files in other folders)
