[package]
name = "keyring-client"
version = "0.1.0"
authors = ["ChristianVisintin <christian.visintin1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
keyring = "0.10.1"
whoami = "1.0.3"
