[package]
name = "minikube-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argh = "0.1"
dirs = "5"
k8s-openapi = { version = "0.22", features = ["v1_30"] }
kube = { version = "0.92", features = ["client", "config", "runtime", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
