[package]
name = "rabbitmq"
version = "0.1.0"
authors = ["veeso <christian.visintin1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "1.7.0"
futures = "0.3.14"

[[bin]]
name = "rabbit-pub"
path = "src/publisher.rs"

[[bin]]
name = "rabbit-sub"
path = "src/consumer.rs"
