[package]
name = "remotefs-ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.9.0"
remotefs = "^0.1.1"
#remotefs = { git = "https://github.com/veeso/remotefs-rs", branch = "ssh-bufio" }
