[package]
name = "surrealdb-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3"
log = "^0.4"
serde = { version = "^1.0", features = [ "derive" ] }
serde_json = "^1.0"
surrealdb = "1.0.0-beta.8"
